// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultChildren should render the toggle icon with "on" equals to false 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 2rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="key"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 4.75rem",
        }
      }
    >
      <div
        style={
          Object {
            "height": "2rem",
            "left": "3.25rem",
            "position": "absolute",
            "width": "2rem",
          }
        }
      >
        <ToggleIcon
          on={false}
        >
          <div
            aria-label="Toggle"
            role="img"
          >
            +
          </div>
        </ToggleIcon>
      </div>
      foo
    </li>
  </ul>,
]
`;

exports[`defaultChildren should render the toggle icon with "on" equals to true 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 2rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="foo"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 4.75rem",
        }
      }
    >
      <div
        style={
          Object {
            "height": "2rem",
            "left": "3.25rem",
            "position": "absolute",
            "width": "2rem",
          }
        }
      >
        <ToggleIcon
          on={true}
        >
          <div
            aria-label="Toggle"
            role="img"
          >
            -
          </div>
        </ToggleIcon>
      </div>
      foo
    </li>
    <li
      key="bar"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 6rem",
        }
      }
    >
      bar
    </li>
    <li
      key="zoo"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 6rem",
        }
      }
    >
      zoo
    </li>
  </ul>,
]
`;

exports[`defaultChildren should render without the toggle icon 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 2rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="key"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 3.5rem",
        }
      }
    >
      foo
    </li>
  </ul>,
]
`;
